# xghostclick

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh
source/: settings.h  xghostclick.cxx
source/hooks/: send_input.h
source/modules/: clicker.h
source/utils/: hooker.cxx  hooker.h  input.cxx  input.h  psrand.cxx  time.cxx
src/: keybind.cxx  keybind.h  runner.cxx  runner.h  settings.cxx  settings.h  xghostclick.cxx
src/hooks/: send_input.cxx
src/modules/: clicker.cxx  clicker.h
src/utils/: input.cxx  psrand.cxx  psrand.h  time.h
